--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "ritahomolya.com",
 	"version": "0.0.1",
 	"scripts": {
+		"tsc": "tsc",
+		"eslint": "eslint",
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"start": "svelte-kit start",
@@ -24,8 +26,8 @@
 		"svelte": "^3.29.0",
 		"svelte-preprocess": "^4.0.0",
 		"tailwindcss": "^2.1.1",
-		"tslib": "^2.0.0",
-		"typescript": "^4.0.0",
+		"tslib": "^2.2.0",
+		"typescript": "^4.2.4",
 		"vite": "^2.1.0"
 	},
 	"type": "module"
