--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
+		"@types/nodemailer": "^6.4.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.5",
+		"dotenv": "^8.2.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
+		"nodemailer": "^6.5.0",
 		"postcss": "^8.2.9",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
