--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@google-cloud/firestore": "^4.10.0",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
+		"@types/accept-language-parser": "^1.5.1",
+		"@types/node-fetch": "^2.5.10",
 		"@types/nodemailer": "^6.4.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
+		"accept-language-parser": "^1.5.0",
 		"autoprefixer": "^10.2.5",
 		"dotenv": "^8.2.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
+		"node-fetch": "^2.6.1",
 		"nodemailer": "^6.5.0",
 		"postcss": "^8.2.9",
 		"prettier": "~2.2.1",
