--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"sass": "^1.0.0",
 		"svelte": "^3.29.0",
 		"svelte-preprocess": "^4.0.0",
+		"svelthree": "*",
 		"tailwindcss": "^2.1.1",
 		"tslib": "^2.2.0",
 		"typescript": "^4.2.4",
